# This file is part of `tree-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `tree-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "tree-rizzen-yazston"
version = "0.0.0"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.65.0"
description = "A Simple Tree Library"
license = "BSD-3-Clause"
readme = "README.asciidoc"
# false prevents publishing while developing, else string of repository identfier
publish = false

# these keys are used when preparing to publish to 'crates.io'
#documentation = "<url, default is docs.rs>"
#homepage = "<url"
# once public GitHub repository is used
#repository = "<github url>"
#'crates.io' has max 5 keywords, of max 20 characters [A-Za-z0-9_-] 
#keywords = ["",...]
#'crates.io' has max 5 categories, selected from `crates.io` list
#categories = ["",...]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# only used if package resides outside of workspace.

[dependencies]
# add as required.


# for [lib] and [[bin]], ensure name is present to prevent package name from being used.
# name without the '-rizzen-yazston' suffix
[lib]
name = "tree"