# This file is part of `tree-rizzen-yazston` crate. For the terms of use, please see the file
# called `LICENSE-BSD-3-Clause` at the top level of the `tree-rizzen-yazston` crate.

[package]
# suffix '-rizzen-yazston' appended to prevent package name clashes on 'crates.io'
name = "tree-rizzen-yazston"
version = "0.4.0"
authors = ["Rizzen Yazston"]
edition = "2021"
rust-version = "1.68.2"
description = "A Simple Tree Library using the Any trait for data."
license = "BSD-3-Clause"
readme = "README.asciidoc"
repository = "https://github.com/rizzen-yazston/tree"
keywords = ["tree"]
categories = ["rust-pattern"]

[dependencies]
# None.

[lib]
name = "tree"